tests/ui/join_proof_add.stderr
error[E0599]: no method named `observe_proof` found for type `indexing::index::range::Range<'_>` in the current scope
  --> $DIR/join_proof_add.rs:28:36
   |
28 |             front.join_cover(back).observe_proof();
   |                                    ^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0599`.
